cluster/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /node
        pathType: Prefix
        backend:
          service:
            name: node-service
            port:
              number: 80
      - path: /go
        pathType: Prefix
        backend:
          service:
            name: go-service
            port:
              number: 80
